Prevent horizontal scrolling

--- a/sass/basic.scss
+++ b/sass/basic.scss
@@ -12,4 +12,5 @@ body {
 	@include text_preset4;
 	box-sizing: border-box;
 	color: $purple900;
+	overflow-x: hidden;
 }
