--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   line-height: 1.8;
   box-sizing: border-box;
   color: #24053e;
+  overflow-x: hidden;
 }
 
 header {
@@ -206,14 +207,14 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 11.2rem;
+  margin: 11.2rem 0;
 }
 footer .footer__logo {
   margin-bottom: 5.6rem;
 }
 footer .footer__socials {
   display: flex;
-  max-width: 11.6rem;
+  min-width: 11.6rem;
   justify-content: space-between;
 }
 footer .footer__socials li {
